--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 header {
     height: 100vh;
-    background: url(../assets/home-hero.jpg) fixed no-repeat center;
+    background: url(../assets/home-hero.jpg) fixed no-repeat;
     background-size: cover;
 }
 
@@ -56,8 +56,8 @@ header section {
 header section h1 {
     color: #fafafa;
     font-weight: 300;
-    line-height: 4.5rem;
-    font-size: 3.5rem;
+    line-height: 5rem;
+    font-size: 4rem;
     margin-bottom: 1.5rem;
 }
 
@@ -65,7 +65,7 @@ header section a {
     color: #ffffff;
     background-color: var(--navBtnColorSelected);
     display: inline-block;
-    padding: 1.5rem;
+    padding: 2rem;
 }
 
 header nav:last-child a {
@@ -104,8 +104,10 @@ footer section div {
 
 footer section h2 {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 3.5rem;
+    font-size: 3rem;
     font-weight: 300;
+    color: #000000;
 }
 
 footer section p {
