--- a/css/reset.css
+++ b/css/reset.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
 
 body {
-    font: 1.6rem sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    font: 1.6rem "Open Sans", sans-serif;
     margin: 0;
     background-color: #fafafa;
 }
