--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ header nav ul li:first-child a {
 header nav ul li:first-child a::before {
     content: url(../assets/mail.png);
     margin-right: 0.5rem;
+    margin-top: 1rem;
 }
 
 header section {
@@ -84,11 +85,6 @@ header nav:last-child a {
     padding: 1rem;
     margin: 2rem;
     box-shadow: 0 0.8rem 1rem #222;
-}
-
-.selected {
-    background-color: var(--navBtnColorSelected);
-    color: #ffffff;
 }
 
 footer {
@@ -156,4 +152,9 @@ footer section form fieldset input[type="submit"] {
     color: #ffffff;
     margin-top: 0.5rem;
     width: 40%;
+}
+
+.selected {
+    background-color: var(--navBtnColorSelected);
+    color: #ffffff;
 }
