--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,7 @@ footer section form fieldset input[type="submit"] {
     background-color: var(--navBtnColorSelected);
     color: #ffffff;
 }
+
+.rotation {
+    transform: rotate(180deg);
+}
