--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --fieldsetBorderColor: #dedede;
     --inputBgColor: #f8f5f5;
     --submitBgColor: #1a73e8;
+    --toastBgColor: none;
 }
 
 header {
@@ -169,32 +170,26 @@ footer section form fieldset input[type="submit"] {
     transition-duration: 0.3s;
 }
 
-
 .toast {
     color: white;
-    max-width: 50rem;
+    width: 65%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: 0 auto;
     padding: 0.5rem;
     border-radius: 0.5rem;
     font-size: 2.5rem;
-    margin-top: 2rem;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    margin-bottom: 1.5rem;
+    background-color: var(--toastBgColor);
 }
 
-.toast::before {
-    margin: 0.5rem;
-    /*margin-right: auto;*/
+.toast img:first-child {
+    margin-left: 0.5rem;
+    stroke: #ffffff;
 }
 
-.error {
-    background-color: var(--navBtnColorSelected);
-}
-
-.error::before {
-    content: url(../assets/alert.svg);
+.toast img:last-child {
+    margin-right: 0.5rem;
+    stroke: #ffffff;
 }
